force-app/main/default/objects/Product2/fields/Allow_Regional_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Regional_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable country-based pricing adjustments for this product</description>
    <inlineHelpText>When checked, this product will apply regional pricing multipliers based on the shipping country. Services products only.</inlineHelpText>
    <label>Allow Regional Pricing</label>
    <type>Checkbox</type>
</CustomField>