force-app/main/default/objects/Product2/fields/c2g__CODAIncomeSchedule__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAIncomeSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Schedule</label>
    <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>