force-app/main/default/objects/Product2/fields/c2g__CODAInputTaxCode__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAInputTaxCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Input VAT/GST Code</label>
    <referenceTo>c2g__codaTaxCode__c</referenceTo>
    <relationshipLabel>Products (Purchase Tax Code)</relationshipLabel>
    <relationshipName>ProductsPurchase</relationshipName>
    <type>Lookup</type>
</CustomField>