force-app/main/default/objects/Product2/fields/c2g__CODATaxCode__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODATaxCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output VAT/GST Code</label>
    <referenceTo>c2g__codaTaxCode__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>