force-app/main/default/objects/Product2/fields/c2g__PlaceOfSupply__c.field-meta.xml
<CustomField>
    <fullName>c2g__PlaceOfSupply__c</fullName>
    <label>VAT/GST Place of Supply Rules</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>With Account</fullName>
                <default>true</default>
                <label>With Account</label>
            </value>
            <value>
                <fullName>With Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>