force-app/main/default/objects/Product2/fields/c2g__ReverseCharge__c.field-meta.xml
<CustomField>
    <fullName>c2g__ReverseCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT/GST Reverse Charge</label>
    <type>Checkbox</type>
</CustomField>