force-app/main/default/objects/Product2/fields/CPW_Max__c.field-meta.xml
<CustomField>
    <fullName>CPW_Max__c</fullName>
    <description>Maximum Commercial Processing Workload (CPW) rating threshold for this product. Used in hardware-first workflow to filter products based on hardware CPW rating. Leave blank if no CPW maximum restriction.</description>
    <inlineHelpText>Maximum CPW rating threshold for product eligibility. Products above this threshold may not be eligible for specific hardware configurations.</inlineHelpText>
    <label>CPW Maximum</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>