force-app/main/default/objects/Product2/fields/CPW_Min__c.field-meta.xml
<CustomField>
    <fullName>CPW_Min__c</fullName>
    <description>Minimum Commercial Processing Workload (CPW) rating required for this product to be eligible. Used in hardware-first workflow to filter products based on hardware CPW rating. Leave blank if no CPW minimum requirement.</description>
    <inlineHelpText>Minimum CPW rating required for product eligibility. Products are filtered based on hardware CPW rating in the hardware-first workflow.</inlineHelpText>
    <label>CPW Minimum</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>