force-app/main/default/objects/Product2/fields/Custom_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product_Name__c</fullName>
    <description>Business-specific product naming for sales teams.</description>
    <inlineHelpText>Enter the customer-facing product name.</inlineHelpText>
    <label>Custom Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>