force-app/main/default/objects/Product2/fields/Excluded_Feature_Codes__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Feature_Codes__c</fullName>
    <description>Semicolon-separated list of hardware feature codes that make this product INELIGIBLE. Used in hardware-first workflow to filter products based on hardware feature codes. Leave blank if no feature codes should exclude this product. Example: &quot;FC099;FC100&quot;</description>
    <inlineHelpText>Semicolon-separated feature codes that exclude this product (e.g., &quot;FC099;FC100&quot;). Product is ineligible if hardware has ANY listed feature codes.</inlineHelpText>
    <label>Excluded Feature Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>