force-app/main/default/objects/Product2/fields/fferpcore__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
    <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
    <label>Output VAT/GST Code</label>
    <referenceTo>fferpcore__TaxCode__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>