force-app/main/default/objects/Product2/fields/Final_SKU_Name_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Final_SKU_Name_License_Type__c</fullName>
    <label>Final SKU Name &amp; License_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>