force-app/main/default/objects/Product2/fields/Finance_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Finance_Business_Unit__c</fullName>
    <label>Finance Business Unit #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>