force-app/main/default/objects/Product2/fields/Fortra_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Fortra_Product_Type__c</fullName>
    <label>Fortra Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>New Maintenance</fullName>
            </value>
            <value>
                <fullName>Renewal Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>License Upgrade Fee</fullName>
            </value>
            <value>
                <fullName>SaaS Subscription</fullName>
            </value>
            <value>
                <fullName>Renewal Services</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Bundle Component</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Support Add-on</fullName>
            </value>
            <value>
                <fullName>Change Fee</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>