force-app/main/default/objects/Product2/fields/Hardware_ID__c.field-meta.xml
<CustomField>
    <fullName>Hardware_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this product requires hardware management</description>
    <inlineHelpText>Check this box if this product requires hardware tracking and management</inlineHelpText>
    <label>Hardware ID</label>
    <type>Checkbox</type>
</CustomField>