force-app/main/default/objects/Product2/fields/Has_Attribute_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Has_Attribute_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product has attributes that are used in combination with volumes for pricing.  Mapped to Quote Line Item.</description>
    <label>Has Attribute Value Pricing</label>
    <type>Checkbox</type>
</CustomField>