force-app/main/default/objects/Product2/fields/Is_Recurring_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring_Service__c</fullName>
    <description>Returns true for recurring services revenue categories</description>
    <formula>Rev_Category__c = &apos;RC_45004&apos;</formula>
    <inlineHelpText>Returns true for recurring services revenue categories</inlineHelpText>
    <label>Is Recurring Service</label>
    <type>Checkbox</type>
</CustomField>