force-app/main/default/objects/Product2/fields/Legacy_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Brand_Name__c</fullName>
    <label>Legacy Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>