force-app/main/default/objects/Product2/fields/Legacy_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Number__c</fullName>
    <description>One time data load for Legacy Product number from existting system</description>
    <label>Legacy Product Number</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>