force-app/main/default/objects/Product2/fields/Legacy_ProductId__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ProductId__c</fullName>
    <label>Legacy ProductId</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>