force-app/main/default/objects/Product2/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Fee</fullName>
            </value>
            <value>
                <fullName>New Maintenance</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Renewal Maintenance</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>