force-app/main/default/objects/Product2/fields/Parent_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category_Name__c</fullName>
    <label>Parent Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>