force-app/main/default/objects/Product2/fields/Power_Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Power_Split_Type__c</fullName>
    <description>Determines how order lines are split for Power products when quantity is greater than 1.
&quot;Order Line Only&quot; shares hardware across split lines (each line gets own cloned partition linked to shared hardware).
&quot;Order Line and Hardware&quot; clones hardware for each split line (each line gets own cloned hardware and partition).</description>
    <inlineHelpText>Select how hardware records should be handled when this product&apos;s order lines are split.</inlineHelpText>
    <label>Power Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Line Only</fullName>
                <default>true</default>
                <label>Order Line Only</label>
            </value>
            <value>
                <fullName>Order Line and Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>