force-app/main/default/objects/Product2/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>