force-app/main/default/objects/Product2/fields/Primary_Catalog_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Catalog_Name__c</fullName>
    <inlineHelpText>The primary catalog name this product belongs to for ARR reporting</inlineHelpText>
    <label>Primary Catalog Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>