force-app/main/default/objects/Product2/fields/Primary_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Category_Name__c</fullName>
    <inlineHelpText>The primary category name this product belongs to for ARR reporting</inlineHelpText>
    <label>Primary Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>