force-app/main/default/objects/Product2/fields/Processor_Min__c.field-meta.xml
<CustomField>
    <fullName>Processor_Min__c</fullName>
    <description>Minimum number of processors required for this product to be eligible. Used in hardware-first workflow to filter products based on hardware processor count. Leave blank if no processor minimum requirement.</description>
    <inlineHelpText>Minimum processor count required for product eligibility. Products are filtered based on hardware processor count in the hardware-first workflow.</inlineHelpText>
    <label>Processor Minimum</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>