force-app/main/default/objects/Product2/fields/Product_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Product_Descriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Services descriptions for quote documents.</description>
    <label>Product Descriptions</label>
    <referenceTo>ProductDescription__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>