force-app/main/default/objects/Product2/fields/Product_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Product_Lifecycle_Stage__c</fullName>
    <inlineHelpText>Please select the current product lifecycle.</inlineHelpText>
    <label>Product Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Just Launched</fullName>
            </value>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Sunset</fullName>
            </value>
            <value>
                <fullName>Versioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>