force-app/main/default/objects/Product2/fields/Product_Selling_Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Selling_Model_Type__c</fullName>
    <label>Product Selling Model Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>