force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>The value of this field is used to reflect from the given spreadsheet</description>
    <label>ProductType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>