force-app/main/default/objects/Product2/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>