force-app/main/default/objects/Product2/fields/pse__ServicesCreditValue__c.field-meta.xml
<CustomField>
    <fullName>pse__ServicesCreditValue__c</fullName>
    <description>If this is a Services Credits product, use this field to specify the number of services credits included.</description>
    <inlineHelpText>If this is a Services Credits product, use this field to specify the number of services credits included.</inlineHelpText>
    <label>Services Credits</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>