force-app/main/default/objects/Product2/fields/Required_Feature_Codes__c.field-meta.xml
<CustomField>
    <fullName>Required_Feature_Codes__c</fullName>
    <description>Semicolon-separated list of hardware feature codes that MUST be present for this product to be eligible. Used in hardware-first workflow to filter products based on hardware feature codes. Leave blank if no specific feature codes required. Example: &quot;FC001;FC002;FC003&quot;</description>
    <inlineHelpText>Semicolon-separated feature codes required for eligibility (e.g., &quot;FC001;FC002&quot;). Product is eligible only if hardware has ALL listed feature codes.</inlineHelpText>
    <label>Required Feature Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>