force-app/main/default/objects/Product2/fields/Rev_Category__c.field-meta.xml
<CustomField>
    <fullName>Rev_Category__c</fullName>
    <description>Revenue category from the legacy system.</description>
    <inlineHelpText>Displays the product’s legacy revenue category.</inlineHelpText>
    <label>Rev Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>