force-app/main/default/objects/Product2/fields/Rev_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Rev_Category_Name__c</fullName>
    <description>Revenue category name from the legacy system.</description>
    <inlineHelpText>Revenue category name from the legacy system.</inlineHelpText>
    <label>Rev Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>