force-app/main/default/objects/Product2/fields/Rev_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Rev_Schedule__c</fullName>
    <description>Revenue schedule from the legacy system.</description>
    <inlineHelpText>Revenue schedule from the legacy system.</inlineHelpText>
    <label>Rev Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>