force-app/main/default/objects/Product2/fields/Revenue_Recognition_Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Schedule_Template__c</fullName>
    <description>Revenue recognition schedule template from the legacy system.</description>
    <inlineHelpText>Revenue recognition schedule template from the legacy system.</inlineHelpText>
    <label>Revenue Recognition Schedule Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>