force-app/main/default/objects/Product2/fields/Revenue_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Treatment__c</fullName>
    <label>Revenue Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>