force-app/main/default/objects/Product2/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Specifies the exact solution offering.</description>
    <inlineHelpText>Select the specific solution name that represents the product or offering.</inlineHelpText>
    <label>Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>