force-app/main/default/objects/Product2/fields/Solution_Category__c.field-meta.xml
<CustomField>
    <fullName>Solution_Category__c</fullName>
    <description>Defines the functional category within the solution group.</description>
    <inlineHelpText>Choose the product’s functional category, such as Data Protection, Infrastructure Monitoring, or Threat Intelligence.</inlineHelpText>
    <label>Solution Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>