force-app/main/default/objects/Product2/fields/Solution_Group__c.field-meta.xml
<CustomField>
    <fullName>Solution_Group__c</fullName>
    <description>Groups related solutions under the selected unit.</description>
    <inlineHelpText>Select the solution group that aligns with the product’s business unit (e.g., Defensive Security, Automation).</inlineHelpText>
    <label>Solution Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>