force-app/main/default/objects/Product2/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Identifies the main business unit for the product.</description>
    <inlineHelpText>Choose the business unit — Cyber or Tech — to classify the product line.</inlineHelpText>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>