force-app/main/default/objects/Product2/fields/Workday_Sales_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Workday_Sales_Item_ID__c</fullName>
    <externalId>true</externalId>
    <label>Workday Sales Item ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>