force-app/main/default/objects/Product2/recordTypes/Technical_Product.recordType-meta.xml
<RecordType>
    <fullName>Technical_Product</fullName>
    <active>true</active>
    <description>Technical products used for order decomposition and fulfillment. These are the destination products that commercial products decompose into.</description>
    <label>Technical Product</label>
</RecordType>