force-app/main/default/objects/Product2/validationRules/UOM_Required_For_Active_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>UOM_Required_For_Active_Products</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsActive, ISBLANK(TEXT(QuantityUnitOfMeasure)))</errorConditionFormula>
    <errorMessage>Active products must have a Unit of Measure</errorMessage>
</ValidationRule>