force-app/main/default/objects/Product2/listViews/Allow_Regional_Services.listView-meta.xml
<ListView>
    <fullName>Allow_Regional_Services</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Allow_Regional_Pricing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Allow Regional Services</label>
</ListView>