force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Legacy_Brand_Name__c</columns>
    <columns>Legacy_Product_Number__c</columns>
    <columns>Legacy_ProductId__c</columns>
    <columns>License_Type__c</columns>
    <columns>Parent_Category_Name__c</columns>
    <columns>Primary_Catalog_Name__c</columns>
    <columns>Primary_Category_Name__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>Solution__c</columns>
    <columns>Solution_Category__c</columns>
    <columns>Solution_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>