force-app/main/default/objects/Product2/listViews/Attribute_Value_Pricing.listView-meta.xml
<ListView>
    <fullName>Attribute_Value_Pricing</fullName>
    <columns>Parent_Category_Name__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Has_Attribute_Pricing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Attribute Value Pricing</label>
</ListView>