force-app/main/default/objects/Product2/listViews/Brand_Protection_Products.listView-meta.xml
<ListView>
    <fullName>Brand_Protection_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Parent_Category_Name__c</field>
        <operation>equals</operation>
        <value>Brand Protection</value>
    </filters>
    <label>Brand Protection Products</label>
</ListView>