force-app/main/default/objects/Product2/listViews/Bundle_Children.listView-meta.xml
<ListView>
    <fullName>Bundle_Children</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.PRODUCT_TYPE</field>
        <operation>notEqual</operation>
        <value>B</value>
    </filters>
    <label>Bundle Children</label>
</ListView>