force-app/main/default/objects/Product2/listViews/Cyber_New.listView-meta.xml
<ListView>
    <fullName>Cyber_New</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Fortra_Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>CYB</value>
    </filters>
    <label>Cyber - New</label>
</ListView>