force-app/main/default/objects/Product2/listViews/Defensive_Security_Products.listView-meta.xml
<ListView>
    <fullName>Defensive_Security_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>DCS</value>
    </filters>
    <label>Defensive Security Products</label>
</ListView>